# daam

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py  test_hook.py
.github/workflows/: lint.yml  test-python.yml
daam/: attention_processor.py  evaluate.py  experiment.py  heatmap.py  hook.py  trace.py  utils.py
daam/run/: demo.py  evaluate.py  generate.py
tests/: test_heatmap.py  test_trace.py  test_utils.py
