[tool.poetry]
name = "daam"
version = "0.1.1"
description = ""
authors = ["rockerBOO <rockerboo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <4.0.0"
accelerate = ">=0.21.0"
transformers = ">=4.30.0"
diffusers = ">=0.21"
pandas = "^2.1.3"
numba = "^0.58.1"
nltk = "^3.8.1"
inflect = "^7.0.0"
joblib = "^1.3.2"
ftfy = "^6.1.3"
spacy = "^3.7.2"
matplotlib = ">=3.6.2"
scipy = ">=1.11.4"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    # "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:Pydantic V1 style `@validator` validators are deprecated',
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
